--- a/css/style.css
+++ b/css/style.css
@@ -335,7 +335,7 @@ button {
     width: 100%;
     height: 100%;
     background: rgba(0, 0, 0, 0.4);
-    backdrop-filter: blur(5px);
+    /*backdrop-filter: blur(5px);*/
     display: flex;
     justify-content: center;
     align-items: center;
